# RAG_Based_YouTube_Chatbot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
core/: embedding_vector_store.py  llm_gen.py  retriever_augmentation.py  transcript_loader.py
